# rust-api-starter

./: .gitignore  Cargo.toml  Dockerfile  cliff.toml  compose.yaml
.github/workflows/: deploy.yml  rust_ci.yml
src/: errors.rs  main.rs
src/api/: errors.rs  health.rs  mod.rs  process.rs
src/api/middleware/: context.rs  log_request_info.rs  mod.rs
tests/: health_check.rs  process.rs
tests/helpers/: common.rs
workflows/: rust_ci.yml
